Adds syft sbom output storage and retrieval for images via API
Adds /images/{digest}/sboms/native API to get gzipped sbom json file in
the syft native format.
