# anchore_engine/services/apiext/swagger/swagger.yaml
@@ -1116,6 +1116,30 @@ paths:
           description: Internal Error
           schema:
             $ref: "#/definitions/ApiErrorResponse"
+  /images/{imageDigest}/sboms/native:
+    get:
+      tags:
+        - Images
+      x-swagger-router-controller: anchore_engine.services.apiext.api.controllers.images
+      operationId: get_image_sbom_native
+      x-anchore-authz-action: getImage
+      summary: Get image sbom in the native Anchore format
+      produces:
+        - application/gzip
+      parameters:
+        - name: imageDigest
+          in: path
+          type: string
+          required: true
+        - $ref: "#/parameters/AsAccountParameter"
+      responses:
+        200:
+          description: Image lookup success
+        500:
+          description: Internal error
+          schema:
+            $ref: "#/definitions/ApiErrorResponse"
+
   /images/{imageDigest}/metadata/{mtype}:
     get:
       tags:
@@ -3551,6 +3575,9 @@ definitions:
           - analyzing
           - analyzed
           - analysis_failed
+      record_version:
+        type: string
+        description: The version of the record, used for internal schema updates and data migrations.
   AnchoreImageList:
     description: A list of Anchore Images
     type: array
@@ -5137,4 +5164,6 @@ definitions:
         additionalProperties: true
         type: object
     additionalProperties: true
+    type: object
+  NativeSbom:
     type: object
